--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 
 
     <!--<script type="text/javascript" src="build/common-concat-min.js"></script>-->
-    <!--  <script type="text/javascript" src="gi18n.js"></script> -->
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/router.js"></script>
     <script type="text/javascript" src="js/services.js"></script>
     <script type="text/javascript" src="js/index.ctrl.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
+    <script type="text/javascript" src="gi18n.js"></script>
     <!-- <script type="text/javascript" src="js/gi18n.js"></script> -->
     <!--<script type="text/javascript" src="gi18n.js"></script>-->
 </head>
