8iln grunt grid-sort

--- a/index.html
+++ b/index.html
@@ -39,28 +39,28 @@
     <link type="text/css" rel="stylesheet" href="css/common.css">
 
 
-    <script type="text/javascript" src="resouces/vendor/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="resouces/vendor/lodash.min.js"></script>
-    <script type="text/javascript" src="resouces/vendor/angular.js"></script>
-    <script type="text/javascript" src="resouces/vendor/angular-sanitize.js"></script>
-    <script type="text/javascript" src="resouces/vendor/angular-ui-router.js"></script>
-    <script type="text/javascript" src="resouces/vendor/angular-translate.js"></script>
-    <script type="text/javascript" src="resouces/lab/ui.js"></script>
+    <script type="text/javascript" src="resource/vendor/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="resource/vendor/lodash.min.js"></script>
+    <script type="text/javascript" src="resource/vendor/angular.js"></script>
+    <script type="text/javascript" src="resource/vendor/angular-sanitize.js"></script>
+    <script type="text/javascript" src="resource/vendor/angular-ui-router.js"></script>
+    <script type="text/javascript" src="resource/vendor/angular-translate.js"></script>
+    <script type="text/javascript" src="resource/lab/ui.js"></script>
 
-    <script type="text/javascript" src="resouces/lab/ui.buttons.js"></script>
-    <script type="text/javascript" src="resouces/lab/ui.checkbox.js"></script>
-    <script type="text/javascript" src="resouces/lab/ui.transition.js"></script>
-    <script type="text/javascript" src="resouces/lab/ui.modal.js"></script>
-    <script type="text/javascript" src="resouces/lab/ui.dialogs.js"></script>
-    <script type="text/javascript" src="resouces/lab/ui.select.js"></script>
-    <script type="text/javascript" src="resouces/lab/ui.dropdown.js"></script>
-    <script type="text/javascript" src="resouces/lab/ui.position.js"></script>
-    <script type="text/javascript" src="resouces/lab/ui.datepicker.js"></script>
-    <script type="text/javascript" src="resouces/lab/ui.dateparser.js"></script>
-    <script type="text/javascript" src="resouces/lab/ui.timepicker.js"></script>
-    <script type="text/javascript" src="resouces/lab/ui.timepicker.js"></script>
-    <script type="text/javascript" src="resouces/lab/ui.grid.js"></script>
-    <script type="text/javascript" src="resouces/lab/ui.inputSelect.js"></script>
+    <script type="text/javascript" src="resource/lab/ui.buttons.js"></script>
+    <script type="text/javascript" src="resource/lab/ui.checkbox.js"></script>
+    <script type="text/javascript" src="resource/lab/ui.transition.js"></script>
+    <script type="text/javascript" src="resource/lab/ui.modal.js"></script>
+    <script type="text/javascript" src="resource/lab/ui.dialogs.js"></script>
+    <script type="text/javascript" src="resource/lab/ui.select.js"></script>
+    <script type="text/javascript" src="resource/lab/ui.dropdown.js"></script>
+    <script type="text/javascript" src="resource/lab/ui.position.js"></script>
+    <script type="text/javascript" src="resource/lab/ui.datepicker.js"></script>
+    <script type="text/javascript" src="resource/lab/ui.dateparser.js"></script>
+    <script type="text/javascript" src="resource/lab/ui.timepicker.js"></script>
+    <script type="text/javascript" src="resource/lab/ui.timepicker.js"></script>
+    <script type="text/javascript" src="resource/lab/ui.grid.js"></script>
+    <script type="text/javascript" src="resource/lab/ui.inputSelect.js"></script>
 
 
     <!--<script type="text/javascript" src="build/common-concat-min.js"></script>-->
@@ -69,8 +69,8 @@
     <script type="text/javascript" src="js/services.js"></script>
     <script type="text/javascript" src="js/index.ctrl.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
-    <script type="text/javascript" src="gi18n.js"></script>
-    <!-- <script type="text/javascript" src="js/gi18n.js"></script> -->
+    <!--<script type="text/javascript" src="gi18n.js"></script>-->
+     <script type="text/javascript" src="js/i18n.js"></script>
     <!--<script type="text/javascript" src="gi18n.js"></script>-->
 </head>
 <body>
